--- a/app/scss/views/_splash.scss
+++ b/app/scss/views/_splash.scss
@@ -66,4 +66,24 @@
 		color: inherit;
 		text-decoration: none;
 	}
+
+
+	.tester{
+		position: absolute;
+		top: 30px;
+		left: 30px;
+		width: 50px;
+		height: 50px;
+		border-radius: 50%;
+		overflow: hidden;
+		background-color: rgba(0,0,0,0.2);
+		perspective: 50px;
+
+		.rect{
+			position: absolute;
+			width: 100px;
+			height: 30px;
+			background-color: #f60;
+		}
+	}
 }
